# wfmrfm

./: .gitignore  .gitmodules
data_spec/go2_airbot/: SCHEMA.md
data_spec/go2_airbot/meta/: info.json  modality.json
docs/: eval_system_plan.md  isaac_docker_setup.md
go2_airbot_play/: README.md  pyproject.toml
go2_airbot_play/gr00t/: HANDOFF.md  README.md  add_single_arm_eef.py  convert_go2_airbot_config.yaml  convert_pickplace_to_lerobot.py  finetune_go2_airbot.sh  go2_airbot_arm_data_config.py  go2_airbot_joint_data_config.py  go2_airbot_wbc_data_config.py  info.json  modality.json  modality_arm.json  modality_converter.json  modality_joint.json
go2_airbot_play/gr00t/eval/: README.md  eval_jobs_config.json  make_stats_json.py  run_eval.sh  serve_go2airbot_gr00t.py
go2_airbot_play/gr00t/joints/: go2_airbot_joint_space.yaml  gr00t_go2_airbot_joint_space.yaml
go2_airbot_play/scripts/: collect_pickplace_dataset.py
go2_airbot_play/src/go2_airbot_play/: __init__.py  embodiment.py  environment.py
go2_airbot_play/src/go2_airbot_play/assets/: __init__.py  articulation_cfg.py
go2_airbot_play/src/go2_airbot_play/eval/: __init__.py  gr00t_eef_policy.py  gr00t_joint_policy.py
go2_airbot_play/src/go2_airbot_play/locomotion/: __init__.py  flat_env_cfg.py
go2_airbot_play/src/go2_airbot_play/locomotion/agents/: __init__.py  rsl_rl_ppo_cfg.py
go2_airbot_play/src/go2_airbot_play/locomotion/mdp/: __init__.py  commands.py  events.py  rewards.py
scripts/: run_arena_docker.sh
